# serverless-sync-lambda-test

./: .gitignore  LICENSE  README.md  samconfig.toml  template.yaml
db/: template.yaml
golang/: Makefile  go.mod  go.sum  go.work  samconfig.toml  template.yaml
golang/cmd/api/: main.go
golang/internal/models/: item.go
golang/internal/store/: dynamodb.go
nodejs/: package-lock.json  package.json  samconfig.toml  template.yaml
nodejs/src/: app.ts
rust/: Cargo.toml  samconfig.toml  template.yaml
rust/src/: main.rs
test/k6/: config.json  ramp-test.js  run.sh  spike-test.js
test/k6/reports/: spike-report-20250731-152852.html
